# transcode_toolkit

./: .coverage  .gitignore  .transcode_settings.json  AGENTS.md  Dockerfile  LICENSE  README.md  RUFF_FIXES.md  RUFF_FIXES_PROGRESS.md  Taskfile.yml  check_deps.py  config.py  config.yaml  constants.py  docker-compose.yml  flake.nix  main.py  media_toolkit.py  pyproject.toml  test_duplicates.py  tui_main.py
.gitea/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
audio/: estimate.py  opus_quality.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  audio.py  utils.py  video.py
core/: __init__.py  audio_analysis.py  base.py  config.py  duplicate_finder.py  ffmpeg.py  file_manager.py
docs/: save-settings-usage.md
examples/: demo_progress_bars.py
processors/: __init__.py  audio_processor.py  video_processor.py
src/transcode_toolkit/: __init__.py  __main__.py  audio.py  chain.py  cli.py  config.py  ffmpeg.py  types.py  video.py
src/transcode_toolkit/audio/: __init__.py  estimate.py
src/transcode_toolkit/cli/: __init__.py  __main__.py  failure_table.py  main.py
src/transcode_toolkit/cli/commands/: __init__.py  audio.py  utils.py  video.py
src/transcode_toolkit/config/: __init__.py  constants.py  settings.py
src/transcode_toolkit/core/: __init__.py  audio_analysis.py  base.py  config.py  directory_processor.py  duplicate_finder.py  ffmpeg.py  file_manager.py  thermal.py  unified_estimate.py  video_analysis.py
src/transcode_toolkit/processors/: __init__.py  audio_processor.py  video_processor.py
src/transcode_toolkit/tui/: __init__.py
src/transcode_toolkit/video/: __init__.py  blur_quality.py  estimate.py  transcode.py
tests/: __init__.py  conftest.py  test_audio.py  test_audio_integration.py  test_audio_video_estimate.py  test_audio_video_transcode.py  test_chain.py  test_config.py  test_error_scoring_integration.py  test_progress_bars.py  test_speed_scoring.py  test_timeout_fix.py  test_transcode.py  test_video.py  test_video_integration.py
tui/: __init__.py  app.py
video/: __init__.py  blur_quality.py  estimate.py  transcode.py
