[project]
name = "transcode-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ninja>=1.11.1.4",
    "nuitka>=2.7.7",
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "psutil>=6.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.0",
    "ruff>=0.11.13",
    "textual>=3.5.0",
    "tqdm>=4.60.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a11",
    "types-psutil>=6.1.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-tqdm>=4.67.0.20250516",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]
include = ["pyproject.toml", "*.py"]

line-length = 120
indent-width = 4
target-version = "py313"

lint.select = ["ALL"]
lint.ignore = [
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "ISC001",  # Implicitly concatenated string literals on one line
    "COM812",  # Trailing comma missing
    "T201",    # print found
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "E501",    # Line too long (handled by formatter)
    "S608",    # Possible SQL injection vector through string-based query construction
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

[tool.mypy]
ignore_missing_imports = true
