[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcode-toolkit"
version = "0.2.0"
description = "Convert Audio/Video files and folders to save space, while keeping similar quality."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ninja>=1.11.1.4",
    "nuitka>=2.7.7",
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "psutil>=6.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.0",
    "ruff>=0.11.13",
    "scikit-image>=0.25.2",
    "textual>=3.5.0",
    "tqdm>=4.60.0",
    "vulture>=2.14",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.25.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "ty>=0.0.1a11",
    "types-psutil>=6.1.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-tqdm>=4.67.0.20250516",
    "vulture>=2.14",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]
include = ["pyproject.toml", "*.py"]

line-length = 120
indent-width = 4
target-version = "py312"

lint.select = ["ALL"]
lint.ignore = [
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "ISC001",  # Implicitly concatenated string literals on one line
    "COM812",  # Trailing comma missing
    "TID252",  # Prefer absolute imports over relative imports from parent modules
    "T201",    # Allow print statements (needed for CLI output)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src/transcode_toolkit --cov-report=term --cov-report=html"
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow asserts in test files
"**/test_*.py" = ["S101"]   # Allow asserts in test files

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/.venv/*",
    "*/build/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true
exclude = [
    "tests/.*",
]
