[project]
name = "transcode-toolkit"
version = "0.1.0"
description = "Unified CLI toolkit for video/audio transcoding and size estimation"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings[yaml]>=2.8",
    "typer>=0.16",
    "psutil>=7.0",
    "tqdm>=4.67",
    "xxhash>=3.5",
    "textual>=8.2.7",
]

[project.scripts]
transcode-toolkit = "transcode_toolkit.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12",
    "types-psutil>=7.0",
    "types-tqdm>=4.67",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12.20260518",
    "ty>=0.0.1a11",
]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = [
    "D203",
    "D212",
    "ISC001",
    "COM812",
    "TID252",
    "T201",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "S603",
    "S607",
    "PLC0415",
    "PLW1510",
    "BLE001",
    "S110",
    "FBT001",
    "FBT003",
    "TC001",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "SLF001", "PLR2004", "INP001", "ARG001", "A002"]
"src/transcode_toolkit/cli.py" = ["F811", "B008"]
"src/transcode_toolkit/video.py" = ["ARG001"]
"src/transcode_toolkit/audio.py" = ["ARG001"]
"src/transcode_toolkit/config.py" = ["PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src/transcode_toolkit --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "*/__main__.py", "*/cli.py", "*/tests/*", "*/.venv/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
